refactor(state): expand HovorkaState to 8 ODE vars (x3, protFatGut) + activeGI tracking
Adds scaffolding for EGP dynamic suppression (x3), protein/fat GLP-1 driver
(protFatGut), and GI-aware absorption (activeGI). No behaviour changes yet:
new derivatives return 0 stubs. All existing tests pass.

Co-Authored-By: claude-flow <ruv@ruv.net>